# Tinalux

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.zh-CN.md  README.en.md  README.md  main.cpp  syncSkia-gitee.bat  syncSkia.bat  syncSkia.sh
cmake/: SkiaConfig.cmake  (+6 more)
src/app/: Application.cpp  ApplicationAndroidRuntimeAccess.h  ApplicationTestAccess.h  BackendPlan.cpp  BackendPlan.h  CMakeLists.txt  LoopTiming.cpp  LoopTiming.h  RuntimeHooks.cpp  RuntimeHooks.h  UIContext.cpp  UIContext.h  UIContextApplicationAccess.h  UIContextTestAccess.h
src/app/android/: AndroidJniBridge.cpp  AndroidNativeEntry.cpp  AndroidRuntime.cpp  AndroidRuntimeBridgeAccess.h  AndroidRuntimeTestAccess.h
src/core/: CMakeLists.txt  Log.cpp  Reflect.cpp  SkiaGeometry.h  core.cpp
src/markup/: ActionHeaderTool.cpp  BindingExpression.cpp  BindingExpression.h  BuiltinRegistrations.cpp  CMakeLists.txt  DocumentLoader.cpp  DocumentLoader.h  LayoutActionCatalog.cpp  LayoutBuilder.cpp  LayoutLoader.cpp  Lexer.cpp  Parser.cpp  ViewModel.cpp
src/platform/: CMakeLists.txt  Window.cpp
src/platform/android/: AndroidWindow.cpp  AndroidWindow.h
src/platform/glfw/: CocoaMainThread.h  CocoaMetalLayerBridge.h  CocoaMetalLayerBridge.mm  CocoaTextInputBridge.h  CocoaTextInputBridge.mm  GLFWWindow.cpp  GLFWWindow.h  WindowScaleUtils.h
src/rendering/: CMakeLists.txt  FontCache.cpp  FontCache.h  FrameLifecycle.h  GLContext.cpp  HandleCast.h  Image.cpp  ImageCache.cpp  ImageCache.h  MetalBackend.cpp  MetalBackend.h  MetalBackend.mm  MetalBackendState.h  OpenGLWindowSurfaceState.h  ParagraphPainter.cpp  ParagraphPainter.h  RasterSurface.cpp  RenderContextFactory.cpp  RenderHandles.h  RenderSurfaceLifecycle.cpp  TextBackend.cpp  TextBackend.h  VulkanBackend.cpp  VulkanBackend.h  VulkanBackendState.h  WindowSurface.cpp  rendering.cpp
src/ui/: Animation.cpp  ButtonStyle.cpp  CMakeLists.txt  Clipboard.cpp  Constraints.cpp  Container.cpp  DemoScene.cpp  DialogStyle.cpp  IconRegistry.cpp  ListViewStyle.cpp  PanelStyle.cpp  ParagraphTextLayout.cpp  ParagraphTextLayout.h  ResourceLoader.cpp  ResourceManager.cpp  RichTextStyle.cpp  RuntimeState.cpp  RuntimeState.h  ScrollViewStyle.cpp  SelectionControlStyle.cpp  SliderStyle.cpp  TextInputStyle.cpp  TextMetricsBackend.cpp  TextMetricsBackend.h  TextPrimitives.cpp  TextPrimitives.h  Theme.cpp  ThemeManager.cpp  Widget.cpp
src/ui/layouts/: FlexLayout.cpp  GridLayout.cpp  HBoxLayout.cpp  LayoutUtils.h  ResponsiveLayout.cpp  VBoxLayout.cpp
src/ui/showcase/: ContentPages.cpp  FoundationPages.cpp  InputPages.cpp  ShowcasePageFactories.h  ShowcasePages.cpp  ShowcasePages.h  ShowcaseSupport.cpp  ShowcaseSupport.h  SystemPages.cpp
src/ui/widgets/: Button.cpp  Checkbox.cpp  Dialog.cpp  Dropdown.cpp  Flex.cpp  Grid.cpp  HBox.cpp  HoverAnimationUtils.h  ImageWidget.cpp  Label.cpp  ListView.cpp  Panel.cpp  ParagraphLabel.cpp  ProgressBar.cpp  Radio.cpp  RichText.cpp  ScrollView.cpp  Slider.cpp  TextInput.cpp  Toggle.cpp  VBox.cpp
src/ui/widgets/text_input/: TextInputLayoutCache.cpp  TextInputLayoutCache.h  TextInputModel.cpp  TextInputModel.h  TextInputUtf8.h
tests/: CMakeLists.txt
tests/app/: android_runtime_lifecycle_smoke.cpp  application_backend_fallback_smoke.cpp  application_clipboard_binding_smoke.cpp  application_dpi_smoke.cpp  application_loop_timing_smoke.cpp  application_resource_manager_binding_smoke.cpp  application_skia_runtime_binding_smoke.cpp  backend_plan_smoke.cpp
tests/core/: frame_prepare_smoke.cpp  log_smoke.cpp  metal_context_smoke.cpp  metal_surface_smoke.cpp  opengl_window_surface_state_smoke.cpp  render_backend_smoke.cpp  version_smoke.cpp
tests/markup/: generated_bindings_controls_smoke.cpp  generated_bindings_controls_smoke.tui  generated_bindings_default_smoke.cpp  generated_bindings_grouped_smoke.cpp  generated_bindings_grouped_smoke.tui  generated_bindings_scan_smoke.cpp  generated_bindings_smoke.cpp  generated_page_scaffold_scan_smoke.cpp  generated_page_scaffold_smoke.cpp  layout_action_catalog_smoke.cpp  layout_binding_smoke.cpp  layout_control_flow_smoke.cpp  layout_loader_smoke.cpp  layout_rebind_smoke.cpp  mental_model_scan_smoke.cpp  mental_model_smoke.cpp  parser_smoke.cpp  view_model_smoke.cpp
tests/platform/: glfw_window_scale_smoke.cpp
tests/scripts/: android_build_scripts_smoke_ci_metadata.ps1  android_build_scripts_smoke_stage_run.ps1  android_build_scripts_smoke_stage_summary.ps1  android_build_validate_smoke.ps1  android_smoke_test_helpers.ps1  android_stage_script_smoke.ps1  ci_execution_summary_threshold_guard.ps1  ci_metadata_contract_smoke.ps1  ci_metadata_fetch_baseline.ps1  ci_metadata_manifest_helpers.ps1  ci_metadata_validate.ps1  desktop_smoke_contract_smoke.ps1  linux_tina_glfw_x11_build_run.ps1  linux_tina_glfw_x11_build_summary.ps1  linux_tina_glfw_x11_ci_metadata.ps1  windows_desktop_smoke_ci_metadata.ps1  windows_desktop_smoke_stage_run.ps1  windows_desktop_smoke_stage_summary.ps1  windows_desktop_smoke_test_timings.ps1  windows_desktop_smoke_threshold_guard.ps1
tests/ui/: animation_smoke.cpp  button_style_smoke.cpp  controls_smoke.cpp  demo_scene_hover_isolation_smoke.cpp  demo_scene_resize_roundtrip_render_smoke.cpp  demo_scene_smoke.cpp  desktop_theme_smoke.cpp  dialog_smoke.cpp  dialog_style_smoke.cpp  dirty_subtree_full_redraw_fallback_smoke.cpp  dirty_subtree_islands_smoke.cpp  dirty_subtree_overlap_smoke.cpp  dirty_subtree_prune_smoke.cpp  dpi_smoke.cpp  dropdown_smoke.cpp  event_smoke.cpp  flex_layout_smoke.cpp  grid_layout_smoke.cpp  icon_registry_smoke.cpp  image_smoke.cpp  layout_smoke.cpp  list_view_selection_smoke.cpp  list_view_style_smoke.cpp  list_view_virtualization_smoke.cpp  mobile_theme_smoke.cpp  panel_style_smoke.cpp  paragraph_clipboard_smoke.cpp  render_cache_smoke.cpp  resource_loader_smoke.cpp  resource_manager_smoke.cpp  responsive_layout_smoke.cpp  rich_text_smoke.cpp  scroll_smoke.cpp  scroll_view_style_smoke.cpp  selection_control_style_smoke.cpp  slider_style_smoke.cpp  text_input_icon_smoke.cpp  text_input_model_smoke.cpp  text_input_smoke.cpp  text_input_style_smoke.cpp  (+4 more)
(+157 files in other folders)
